fix Viewport width overflows on small screens #51

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -95,6 +95,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--size-4-4);
+    overflow-x: hidden;
 }
 
 body.daily-notes-hide-frontmatter .daily-note-view .markdown-source-view.is-live-preview.show-properties .metadata-container {
